Add: support multiple feeds in one connection

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ STOMP_SERVER=datafeeds.networkrail.co.uk:61618
 STOMP_USERNAME=john.doe@example.com
 STOMP_PASSWORD=LetMeIn!
 
-FEED_TRAIN_MOVEMENTS=TRAIN_MVT_--_TOC
+FEEDS_TRAIN_MOVEMENTS=TRAIN_MVT_01_TOC,TRAIN_MVT_02_TOC,TRAIN_MVT_03_TOC
